ignore the zip file model

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 xray_crm/xray_crm/xray.h5
 xray_crm/xray_crm/mult_sing.h5
+xray_crm/xray_crm/model.zip
 xray_crm/xray_crm/images/*
 Utilities/*
 Annotations/*
